# Beernary

./: .gitignore  B33rn4ryCounter.py  B33rn4ryCounter.ui  B33rn4ryDatabase.py  B33rn4ryExceptions.py  B33rn4ryReader.py  B33rn4ryRegistry.py  B33rn4ryRegistry.ui  README.md  beernary.code-workspace  config.ini  newUser.py  newUser.ui  pyproject.toml  service.ui
beernary/: beernary_cli.py  beernary_counter.py  beernary_reader.py  requirements.txt
beernary/interface/: config.ini
beernary/modules/: database.py  display.py  flowsensor.py  light.py  metrics.py  reader.py  valve.py
beernary/ressources/: config.ini  mysql-schema.sql
contrib/: b33rn4rycounter.init  config.ini  mysql-structure.sql
counter/: B33rn4ryCounter.ino
deployment/: README
deployment/ansible/: .env  README  ansible.cfg  inventory-production.yml  inventory-testing.yml  playbook.yml
deployment/ansible/group_vars/all/: main.yml
deployment/ansible/group_vars/production/: main.yml
deployment/ansible/group_vars/testing/: main.yml
deployment/ansible/roles/beernary-counter/defaults/: main.yml
deployment/ansible/roles/beernary-counter/handlers/: main.yml
deployment/ansible/roles/beernary-counter/tasks/: main.yml
deployment/ansible/roles/beernary-counter/templates/: beernary-counter.service.j2  config.ini.j2
pcb-design/: README.md  b33rn4ryCounterPCB-cache.lib  b33rn4ryCounterPCB.bak  b33rn4ryCounterPCB.kicad_pcb  b33rn4ryCounterPCB.kicad_pcb-bak  b33rn4ryCounterPCB.kicad_pcb.bak  b33rn4ryCounterPCB.net  b33rn4ryCounterPCB.pro  b33rn4ryCounterPCB.sch
(+17 files in other folders)
